--- a/DownloadManager/DownloadCell.xib
+++ b/DownloadManager/DownloadCell.xib
@@ -57,17 +57,17 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2u-7c-z0g">
-                                <rect key="frame" x="293" y="7.6666666666666643" width="30" height="22"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2u-7c-z0g">
+                                <rect key="frame" x="293" y="5.6666666666666661" width="30" height="25.666666666666671"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="5jy-yX-CLB"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="pause.circle" catalog="system"/>
+                                <state key="normal" image="play.circle" catalog="system"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QPf-ii-XOf">
-                                <rect key="frame" x="331" y="7.6666666666666643" width="30" height="22"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QPf-ii-XOf">
+                                <rect key="frame" x="331" y="5.6666666666666661" width="30" height="25.666666666666671"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="xqF-QZ-FeD"/>
                                 </constraints>
@@ -104,7 +104,7 @@
     </objects>
     <resources>
         <image name="doc" catalog="system" width="115" height="128"/>
-        <image name="pause.circle" catalog="system" width="128" height="123"/>
+        <image name="play.circle" catalog="system" width="128" height="123"/>
         <image name="xmark.circle" catalog="system" width="128" height="123"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
